--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "build": "next build",
     "start": "next start"
   },
-  "author": "UNBX <business@unbx.gg>",
+  "author": "UNBX <admin@unbx.gg>",
   "license": "MIT",
   "homepage": "https://unbx.gg",
   "dependencies": {
-    "next": "^13.0.6",
+    "next": "^14.1.4",
     "nextra": "latest",
     "nextra-theme-docs": "latest",
     "react": "^18.2.0",
